# e8leech_framework

./: DAILY_LOG.md  Dockerfile  LEECH_MATH.md  README.md  ROADMAP.md  api_layer.py  breakthrough_demo.py  cross_pillar_demo.py  density_test.py  lattice_vault.py  leech_db.py  leech_hash.py  lem_prototype.py  parallel_indexer.py  pqc_exchange.py  pyproject.toml  quantum_defense.py  scale_100k.py  scale_100k_push.py  scale_million.py  scale_test.py  semantic_router.py  stress_50k.py  test_math.py  test_quantization.py  verify_engine.py  visualize_density.py
.hypothesis/constants/: 4f22c806081f763e  b0a7885353fd8573  c270ce8675301485  d5124f75d591f36d  da39a3ee5e6b4b0d  dce55ea7eb247a3c
core/: crypto.py  gpu_engine.py  lattices.py
docs/: _config.yml  _toc.yml  requirements.txt  tutorials.md
docs/developer/: api_reference.md  performance_tuning.md  quickstart.ipynb  tutorial.md
docs/research/: e8_comparison.md  mathematical_basis.md  quantum_advantage.md  symmetry_visualization.ipynb
e8leech/: GETTING_STARTED.md  README.md  cli.py  dashboard.py  setup.py
e8leech/ai/: e8_attention.py  embeddings.py  equivariant_gnn.py  lattice_constrained_layer.py  layers.py  regularization.py  transformers.py
e8leech/api/: main.py
e8leech/cloud/: quantum.py
e8leech/core/: barnes_wall.py  base_lattice.py  coxeter_todd.py  cvp.py  e8_lattice.py  golay_code.py  gram_schmidt.py  leech_lattice.py  lll.py  theta_functions.py  vector.py
e8leech/crypto/: bliss.py  key_exchange.py  lattice_based.py  lwe.py  signatures.py
e8leech/data/: lsh.py  (+5 more)
k8s/: deployment.yaml  service.yaml
(+136 files in other folders)
